fixed footer text wrapping issue

--- a/src/before-login/components/footer/footer.styles.scss
+++ b/src/before-login/components/footer/footer.styles.scss
@@ -8,7 +8,7 @@
 	height: 35vh;
 
 	&__item-1 {
-		width: 18%;
+		width: 25%;
 
 		p {
 			font-size: 1.4rem;
@@ -43,7 +43,7 @@
 	}
 
 	&__item-3 {
-		width: 18%;
+		width: 25%;
 		text-align: right;
 		li {
 			padding: 0.6rem 0;
